catkin_ws/logs/backend/build.make.706.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/RosHandler.cpp:100:25: error: variable or field ‘getTm’ declared void
 void  RosHandler::getTm(Matrixf& tm, Matrix<float, 6, 6>& im, double&dt)
                         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/RosHandler.cpp:100:25: error: ‘Matrixf’ was not declared in this scope
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/RosHandler.cpp:100:36: error: expected primary-expression before ‘,’ token
 void  RosHandler::getTm(Matrixf& tm, Matrix<float, 6, 6>& im, double&dt)
                                    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/RosHandler.cpp:100:57: error: expected primary-expression before ‘&’ token
 void  RosHandler::getTm(Matrixf& tm, Matrix<float, 6, 6>& im, double&dt)
                                                         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/RosHandler.cpp:100:59: error: ‘im’ was not declared in this scope
 void  RosHandler::getTm(Matrixf& tm, Matrix<float, 6, 6>& im, double&dt)
                                                           ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/RosHandler.cpp:100:63: error: expected primary-expression before ‘double’
 void  RosHandler::getTm(Matrixf& tm, Matrix<float, 6, 6>& im, double&dt)
                                                               ^
make[2]: *** [CMakeFiles/frontend.dir/src/RosHandler.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘SLAM::Mapping::GraphProcessingResult SLAM::Mapping::processGraph(const Isometry3d&, const Eigen::Matrix<double, 6, 6>&, int, double, bool, bool)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:368:14: warning: variable ‘t’ set but not used [-Wunused-but-set-variable]
     Matrix3d t = transformationMatrix.matrix().topLeftCorner(3,3);
              ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::parallelMatching()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:516:8: warning: variable ‘prevId’ set but not used [-Wunused-but-set-variable]
    int prevId = -1;
        ^
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
